avformat/book: add book format muxer and demuxer
Just example for add book format.
This example is used for book second edition

--- a/libavformat/Makefile
+++ b/libavformat/Makefile
@@ -631,6 +631,8 @@ OBJS-$(CONFIG_XWMA_DEMUXER)              += xwma.o
 OBJS-$(CONFIG_YOP_DEMUXER)               += yop.o
 OBJS-$(CONFIG_YUV4MPEGPIPE_DEMUXER)      += yuv4mpegdec.o
 OBJS-$(CONFIG_YUV4MPEGPIPE_MUXER)        += yuv4mpegenc.o
+OBJS-$(CONFIG_BOOK_DEMUXER)              += bookdec.o
+OBJS-$(CONFIG_BOOK_MUXER)                += bookenc.o
 
 # external library muxers/demuxers
 OBJS-$(CONFIG_AVISYNTH_DEMUXER)          += avisynth.o
